Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjIntegerField.quorum
class Main
    action main
        Integer int
        int = cast(Integer, 5)
        if int:GetValue() = 5
            output "passed"
        end
    end
end