Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjIntObjWrapped.quorum
class main
    action Main
        Integer int
        int:setValue(5)
        Text t = int
    end
end